<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Valley Trail</string>
    <string name="registerBtn">Registrarse</string>
    <string name="enterBtn">Iniciar Sesión</string>
    <string name="enterNoLoginBtn">Continuar como invitado</string>
    <string name="registerName">Nombre</string>
    <string name="registerSurname">Apellido</string>
    <string name="registerPhone">Teléfono</string>
    <string name="registerAddress">Direccion completa</string>
    <string name="registerNif">DNI</string>
    <string name="registerEmail">Email</string>
    <string name="registerPass">Contraseña</string>
    <string name="registerCheckPass">Repite la contraseña</string>
    <string name="datePicker">Fecha de nacimiento</string>
    <string name="tv1">Completa los campos para registrarte</string>
    <string name="btnSave">Registrarse</string>
    <string name="uhTitle">Mi cuenta</string>
    <string name="title_activity_user_home">UserHomeActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Acceder</string>
    <string name="welcome">Bienvenid@!!</string>
    <string name="invalid_password">La contraseña debe tener mas de 5 caracteres</string>
    <string name="login_failed">Inicio de sesión fallido</string>
    <string name="loginPassword">Contraseña</string>
    <string name="loginEmail">Email</string>
    <string name="navigation_drawer_open">DrawerOpen</string>
    <string name="navigation_drawer_close">DrawerClose</string>
    <string name="invalid_username">Usuario no vá280lido</string>
    <string name="logouttext">Cerrar Sesión</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="a_traves_del_congosto">A través del Congosto</string>
    <string name="caminos_ancestrales">Caminos Ancestrales</string>
    <string name="civilizaciones_pasadas">Civilizaciones Pasadas</string>

    <string name="anc_user_info_card">Dificultad: Fácil \nDistancia: 11,2 Km \nDuración: 5h 30min</string>
    <string name="anc_description">Circular al pueblo deshabitado de Bolturina pasando por el Santuario deTorreciudad desde Secastilla.</string>

    <string name="civ_user_info_card">Dificultad: Medio \nDistancia: 14,7 Km \nDuración: 7h 30min</string>
    <string name="civ_description">Circular al pueblo de Bolturina por yacimiento  romano de Labitolosa desde Secastilla.</string>

    <string name="cong_user_info_card"> Dificultad: Media \nDistancia: 13,8Km \nDuración: 6h</string>
    <string name="cong_description">Circular al pueblo de Olvena atravesando el congosto con salida desde  La Puebla de Castro.</string>


    <string name="numero_participantes">Número de participantes</string>
    <string name="reservar">Reservar</string>

    <string name="disponibilidad">Disponibilidad</string>
    <string name="selecciona_una_fecha_para_comprobar_la_disponibilidad">Selecciona una fecha para comprobar la disponibilidad</string>
    <string name="disponible">Disponible</string>
    <string name="no_disponible">No disponible</string>
    <string name="ya_est_s_inscrito_en_esta_ruta">Ya estás inscrito en esta ruta</string>
    <string name="inicio">Inicio</string>
    <string name="contratar_rutas">Contratar Rutas</string>
    <string name="mi_cuenta">Mi Cuenta</string>
    <string name="contacto">Contacto</string>
    <string name="contacto_email">Email</string>
    <string name="contacto_telefono">Telefono</string>
    <string name="inicia_sesi_n">Inicia Sesión</string>
    <string name="calendario_de_rutas">Calendario de rutas</string>
    <string name="bloquear_dia">Bloquear día</string>
    <string name="introduce_tus_datos_de_acceso">Introduce tus datos de acceso</string>
    <string name="historial">Historial</string>
    <string name="usuarios">Usuarios</string>
    <string name="olvid_mi_contrase_a">Olvidé mi contraseña</string>
    <string name="acceder">Acceder</string>
    <string name="mis_rutas">Mis Rutas</string>
    <string name="archivar_ruta">Archivar Ruta</string>
    <string name="detalles">Detalles</string>
    <string name="a_adir_ruta">Añadir ruta</string>
    <string name="ya_hay_una_ruta">Ya hay una ruta</string>
    <string name="nueva_ruta">Crear nueva ruta</string>
    <string name="seleccionar_hora">Seleccionar Hora</string>
    <string name="participantes_m_ximos">Participantes máximos</string>
    <string name="guardar_ruta">Guardar ruta</string>
    <string name="elige_la_ruta">Elige la ruta</string>
    <string name="participantes">%1$s participantes</string>
    <string name="desbloquear">Desbloquear</string>
    <string name="bloquear">Bloquear</string>
    <string name="bloqueado">Bloqueado</string>
    <string name="ruta_agendada">Ruta agendada</string>
    <string name="libre">Libre</string>
    <string name="tel">Tel: %1$s</string>
    <string name="dni">DNI: %1$s</string>
    <string name="continuar_con_google">Acceder con Google</string>
    <string name="olvid_su_contrase_a">¿Olvidó su contraseña?</string>

    <string name="default_web_client_id">137872133912-gcovgcfck5vqtk8hqnqbd4c89l4mcg2h.apps.googleusercontent.com</string>

    <string name="prefs_file">com.amm.valleytraildam.PRREFERENCE_FILE_KEY</string>
    <string name="m_s_tarde">Más tarde</string>
    <string name="completar">Completar</string>
    <string name="por_favor_complete_sus_datos_personales_para_poder_contratar_una_ruta">Por favor, complete sus datos personales para poder contratar una ruta.</string>
    <string name="datos_personales_requeridos">Datos personales requeridos</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="guardar">Guardar</string>
    <string name="editar">Editar</string>
    <string name="max_participantes">Max Participantes</string>
    <string name="entre_el_sera_y_el_cinca">Entre el Ésera y el Cinca</string>
    <string name="ruta_con_plazas_libres">Ruta con %1$s plazas libres</string>
    <string name="participantes_ruta">Participantes</string>
</resources>