<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.SignupActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="14dp"
            android:layout_marginHorizontal="30dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                android:text="@string/tv1"
                android:textAlignment="center"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                android:hint="@string/registerName" />

            <EditText
                android:id="@+id/userSurname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginBottom="14dp"
                android:hint="@string/registerSurname" />

            <EditText
                android:id="@+id/userPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                android:hint="@string/registerPhone"
                android:inputType="phone" />

            <EditText

                android:id="@+id/userAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                android:hint="@string/registerAddress" />
            <EditText

                android:id="@+id/userNif"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                android:hint="@string/registerNif" />

            <EditText
                android:id="@+id/userEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                android:hint="@string/registerEmail" />

            <EditText
                android:id="@+id/userPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                android:inputType="textPassword"
                android:hint="@string/registerPass" />

            <EditText
                android:id="@+id/userCheckPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                android:inputType="textPassword"
                android:hint="@string/registerCheckPass" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/datePickerBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:text="@string/datePicker"
                android:textSize="24sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/registerBtn"
                android:layout_width="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:elevation="10dp"
                android:text="@string/btnSave"/>


        </LinearLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>