<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.adminview.AdminAddRoute">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nueva_ruta"
                android:textAlignment="center"
                android:textSize="24sp" />


            <Button
                android:id="@+id/btnTimePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="14dp"
                android:text="@string/seleccionar_hora"
                android:textSize="14sp" />


            <TextView
                android:id="@+id/tvMaxParticipants"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/participantes_m_ximos"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvSelectedParticipants"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:textAlignment="center"
                android:textSize="20sp" />


            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="34dp"
                android:layout_marginBottom="16dp"
                android:thumb="@drawable/thumb" />


            <TextView
                android:id="@+id/tvDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:textAlignment="center"
                android:textSize="20sp"
                tools:text="Fecha" />


            <TextView
                android:id="@+id/tvTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:textAlignment="center"
                android:textSize="20sp"
                tools:text="Hora" />


            <TextView
                android:id="@+id/tvRouteName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/elige_la_ruta"
                android:textAlignment="center"
                android:textSize="20sp" />


            <RadioGroup
                android:id="@+id/rgRouteKey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="14dp">

                <RadioButton
                    android:id="@+id/rbCong"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/a_traves_del_congosto" />

                <RadioButton
                    android:id="@+id/rbAnc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/caminos_ancestrales" />

                <RadioButton
                    android:id="@+id/rbCiv"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/civilizaciones_pasadas" />


            </RadioGroup>


            <Button
                android:id="@+id/btnCreateRoute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="14dp"
                android:text="@string/guardar_ruta"
                android:textSize="14sp" />


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>