<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.userview.HomeRouteActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#E4FFFFFF"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imMain"
                    android:layout_width="440dp"
                    android:layout_height="290dp"
                    android:layout_gravity="center"
                    android:src="@drawable/im_ancestrales_main"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:shadowRadius="10"
                    android:text="@string/caminos_ancestrales"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvCardInfo"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:elevation="10dp"
                    app:cardBackgroundColor="@color/md_theme_dark_onPrimary"
                    app:cardCornerRadius="20dp"
                    app:layout_constraintTop_toBottomOf="@id/imMain">


                    <TextView
                        android:id="@+id/cvCardText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="20dp"
                        android:textColor="#AAF49C"
                        android:textSize="18sp"
                        tools:text="@string/anc_user_info_card" />


                </androidx.cardview.widget.CardView>


                <TextView
                    android:id="@+id/tvDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="15dp"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    tools:text="@string/anc_description" />

                <ImageView
                    android:id="@+id/im1"
                    android:layout_width="390dp"
                    android:layout_height="390dp"
                    android:src="@drawable/im_anc1" />

                <ImageView
                    android:id="@+id/im2"
                    android:layout_width="390dp"
                    android:layout_height="500dp"
                    android:src="@drawable/im_anc2"
 />

                <ImageView
                    android:id="@+id/im3"
                    android:layout_width="390dp"
                    android:layout_height="500dp"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/im_anc3"
 />

                <ImageView
                    android:id="@+id/im4"
                    android:layout_width="420dp"
                    android:layout_height="440dp"
                    android:src="@drawable/im_anc4"
 />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    app:layout_constraintTop_toBottomOf="@id/im4" />


            </LinearLayout>


        </androidx.cardview.widget.CardView>


    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#C6215E4E"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/ibAddRoute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:backgroundTint="@color/md_theme_dark_inversePrimary"
            android:text="@string/reservar"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>